--- a/src/styles/keypad.css
+++ b/src/styles/keypad.css
@@ -1,53 +1,23 @@
 
-
+  /* button, a {
+    outline: none;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+} */
 .kp-key{
    display: flex;
    justify-content: center;
    align-items: center;
+   align-self: center;
    padding-left:0;
    padding-right:0;
    user-select: none;
 } 
-
-
-.kp-round .kp-key-style{
-  background-image: linear-gradient(to bottom, #dbdbdb, #f3f3f3);
-  border:1px solid rgba(141, 141, 141, 0.548);
-  border-radius: 50%;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size:4vw;
-  margin: 5px;
-  aspect-ratio:1;
-  box-shadow: #000000b3 0px 3px 7px, rgba(14, 13, 13, 0.22) 0px 3px 3px;
-}
-.kp-lambda .kp-key-style{
-   background-image: linear-gradient(to bottom, #dbdbdb, #f3f3f3);
-   border:1px solid rgba(141, 141, 141, 0.548);
-   /* border-radius: 10px; */
-   font-family: Arial, Helvetica, sans-serif;
-   font-size:5vw;
-   font-weight: normal;
-   margin: 5px;
-   line-height: 40px;
-    padding-top: 0.3em;
-    padding-bottom: 0.3em;
-    vertical-align: bottom;
-   box-shadow: #000000b3 0px 3px 7px, rgba(14, 13, 13, 0.22) 0px 3px 3px;
-   /* aspect-ratio:1; */
-   /* aspect-ratio:3; */
-   border-radius: 1.21em;
- }
- .kp-list-container .kp-key-style{
-  border-width: 1px; 
-  border-style: solid; 
-  border-radius: 0.1em;
-  padding-left: .5rem;
-     padding-right: .5rem;
- }
-.kp-one .kp-key-style{
+.kp-alpha .kp-key-style,
+.kp-alpha.kp-key-style{
    border-radius: 10px; 
    font-family: Arial, Helvetica, sans-serif;
-   font-size:5vw;
+   /* font-size:5vw; */
+   font-size: inherit;
    font-weight: normal;
    margin: 5px;
    /* line-height: 1.42;*/
@@ -58,6 +28,47 @@
     /* vertical-align: bottom; */
    aspect-ratio:1; 
  }
+
+.kp-round .kp-key-style,
+.kp-round.kp-key-style{
+  background-image: linear-gradient(to bottom, #dbdbdb, #f3f3f3);
+  border:1px solid rgba(141, 141, 141, 0.548);
+  border-radius: 50%;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: inherit;
+  margin: 5px;
+  aspect-ratio:1;
+  box-shadow: #000000b3 0px 3px 7px, rgba(14, 13, 13, 0.22) 0px 3px 3px;
+}
+.kp-lambda .kp-key-style,
+.kp-lambda.kp-key-style{
+   background-image: linear-gradient(to bottom, #dbdbdb, #f3f3f3);
+   border:1px solid rgba(141, 141, 141, 0.548);
+   /* border-radius: 10px; */
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: inherit;
+   font-weight: normal;
+   margin: 5px;
+   line-height: 40px;
+    padding-top: 0.3em;
+    padding-bottom: 0.3em;
+    
+    padding-left: 0.3em;
+    padding-right: 0.3em;
+    vertical-align: bottom;
+   box-shadow: #000000b3 0px 3px 7px, rgba(14, 13, 13, 0.22) 0px 3px 3px;
+   /* aspect-ratio:1; */
+   /* aspect-ratio:3; */
+   border-radius: 1.21em;
+ }
+ /* .kp-list-container .kp-key-style{
+  border-width: 1px; 
+  border-style: solid; 
+  border-radius: 0.1em;
+  padding-left: .5rem;
+     padding-right: .5rem;
+ } */
+
  .kp-list-container .kp-key-style{
     border-width: 1px; 
     border-style: solid; 
@@ -77,7 +88,7 @@
    align-items: center;
    margin: 0.2em;
    aspect-ratio: unset;
-   font-size:5vw;
+   font-size: inherit;
    user-select: none; /* Standard syntax */
 }
  .kp-light .kp-color{
@@ -85,17 +96,26 @@
    border:1px solid rgba(141, 141, 141, 0.548);
    box-shadow: #000000b3 0px 3px 7px, rgba(14, 13, 13, 0.22) 0px 3px 3px;
  }
- .kp-dark .kp-color{
+ .kp-dark .kp-color,
+ .kp-dark.kp-color{
   color: white;
   background-image: linear-gradient(to bottom, #343333, #676262);
    border:1px solid rgba(45, 43, 43, 0.548);
    box-shadow: #b9b6b6b3 0px 3px 7px, rgba(103, 90, 90, 0.22) 0px 3px 3px;
  }
- .kp-container-grid-by4{
+ .kp-light .kp-grid-container,
+ .kp-light.kp-grid-container{
    display: grid; 
    grid-template-columns: 1fr 1fr 1fr 1fr; 
-   border:1px solid red;
+   border:1px solid black;
+   background-color: white;
  }
+ .kp-dark .kp-grid-container{
+  display: grid; 
+  grid-template-columns: 1fr 1fr 1fr 1fr; 
+  border:1px solid black;
+  background-color: black;
+}
  .kp-list-container{
   display: grid; 
   grid-template-columns: 1fr; 
@@ -133,7 +153,8 @@
     text-shadow: 5px 5px 5px grey; 
     transform: translateY(3px);
    }
-.kp-dark .kp-key:active
+.kp-dark .kp-key:active,
+.kp-dark.kp-key:active
  {
     box-shadow: inset 0px 3px 7px #f5f3f3b3 ,inset 0px 3px 3px rgba(14, 13, 13, 0.22) ;
    transition: 0s;
@@ -142,29 +163,21 @@
     transform: translateY(3px);
    }
 .kp-dark .kp-green,
-.kp-light .kp-green,
-.kp-light [id='kp-key-carriage-return'],
-.kp-dark [id='kp-key-carriage-return']{
+.kp-light .kp-green{
    background-image: linear-gradient(to bottom, #72ad54, #42d644);
    color: white;
    border:1px solid rgb(14, 154, 79);
    box-shadow: #000000b3 0px 3px 7px, rgba(14, 13, 13, 0.22) 0px 3px 3px;
  } 
 .kp-dark .kp-blue,
-.kp-light .kp-blue, 
-.kp-dark [id = "kp-key-equal"],
-.kp-light [id = "kp-key-equal"],
-.kp-dark [id = "kp-key-backspace"],
-.kp-light [id = "kp-key-backspace"] {
+.kp-light .kp-blue {
     background-image: linear-gradient(to bottom, #5468ad, #4276d6);
     color: white;
     border:1px solid rgba(14, 42, 154, 0.767);
     box-shadow: rgba(0, 0, 0, 0.701) 0px 3px 7px, rgba(14, 13, 13, 0.22) 0px 3px 3px;
   }
 .kp-dark .kp-red,
-.kp-light .kp-red,
-.kp-dark [id = "kp-key-delete"],
-.kp-light [id = "kp-key-delete"]{
+.kp-light .kp-red{
     background-image: linear-gradient(to bottom, #ad5454, #d64242);
     color: white;
     border:1px solid rgba(154, 14, 14, 0.767);
