--- a/src/styles/keypad.css
+++ b/src/styles/keypad.css
@@ -1,13 +1,10 @@
 
-  /* button, a {
-    outline: none;
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-} */
+ /* v 0.11 - kp-key: align-self changed to stretch*/
 .kp-key{
    display: flex;
    justify-content: center;
    align-items: center;
-   align-self: center;
+   align-self: stretch; 
    padding-left:0;
    padding-right:0;
    user-select: none;
